--- a/book.toml
+++ b/book.toml
@@ -1,3 +1,9 @@
 title = "A Gentle Introduction to Rust"
 description = "Introduction to the Rust language, standard library and ecosystem"
 author = "Steve Donovan"
+
+[build]
+build-dir = "docs"
+
+[output.html.playpen]
+editable = true
