--- a/book.toml
+++ b/book.toml
@@ -1,10 +1,38 @@
 [book]
 title = "Rust 的绅士介绍"
 description = "Rust语言，标准库和生态系统介绍"
-author = "Steve Donovan"
-translator = "chinanf-boy{yobrave}"
+author = "Steve Donovan,(译:yobrave)"
+language = "zh-CN"
+
+[build]
+build-dir = "docs"
+create-missing = true
+preprocess = ["links", "index"]
+
+[output.html]
+mathjax-support = false
+theme = "src/theme"
+curly-quotes = true
+google-analytics = "UA-128555056-1"
+# additional-css = ["src/theme/custom.css"]
+git_repository_url = "https://github.com/chinanf-boy/gentle-intro"
+git_repository_icon = "fa-github"
+# additional-js = ["src/theme/custom.js"]
 
 [output.html.playpen]
-editable = true
-editor = "ace"
+# editor = "./path/to/editor"
+editable = false
+
+[output.html.search]
+enable = true
+# searcher = "./path/to/searcher"
+limit-results = 30
+teaser-word-count = 30
+use-boolean-and = true
+boost-title = 2
+boost-hierarchy = 1
+boost-paragraph = 1
+expand = true
+heading-split-level = 3
+# copy-js = true
 
