--- a/book.toml
+++ b/book.toml
@@ -7,11 +7,12 @@ language = "zh-CN"
 [build]
 build-dir = "docs"
 create-missing = true
-preprocess = ["links", "index"]
+use-default-preprocessors = false
+preprocess = ["links"]
 
 [output.html]
 mathjax-support = false
-theme = "src/theme"
+theme = "theme"
 curly-quotes = true
 google-analytics = "UA-128555056-1"
 # additional-css = ["src/theme/custom.css"]
@@ -35,4 +36,3 @@ boost-paragraph = 1
 expand = true
 heading-split-level = 3
 # copy-js = true
-
