--- a/book.toml
+++ b/book.toml
@@ -8,17 +8,19 @@ language = "zh-CN"
 build-dir = "docs"
 create-missing = true
 use-default-preprocessors = false
-preprocess = ["links"]
+
+[preprocessor.links]
+# renderers = ["html"]
 
 [output.html]
 mathjax-support = false
 theme = "theme"
 curly-quotes = true
 google-analytics = "UA-128555056-1"
-# additional-css = ["src/theme/custom.css"]
+# additional-css = ["theme/custom.css"]
 git_repository_url = "https://github.com/chinanf-boy/gentle-intro"
 git_repository_icon = "fa-github"
-# additional-js = ["src/theme/custom.js"]
+# additional-js = ["theme/custom.js"]
 
 [output.html.playpen]
 # editor = "./path/to/editor"
